src/index.css
:root {
  --white: #fff;
  --primary: #61ecbc;
  --black: #182339;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
}
body {
  background-image: url("/bg.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100vh;
  font-family: "Outfit", sans-serif;
  font-size: 2rem;
}
.container {
  max-width: 60rem;
  width: 95%;
  margin: 0 auto;
}
.app__title {
  font-size: 3.8rem;
  margin-top: 4.8rem;
  color: var(--white);
  line-height: 0.8;
}
.app__title span {
  display: block;
  color: var(--primary);
  font-size: 4.4rem;
}
.app__content {
  margin-top: 4.8rem;
  padding: 6rem 2rem;
  background-color: var(--white);
  border-radius: 0.8rem;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
}
.form,
.field {
  display: flex;
  flex-direction: column;
}
.form {
  gap: 2rem;
}
.field {
  gap: 0.8rem;
}
.field__label {
  color: var(--black);
}
.field__select {
  background-color: #ecebeb;
  border: none;
  padding: 1.2rem;
  border-radius: 0.8rem;
  font-size: 1.8rem;
}
.form__submit {
  background-color: var(--primary);
  color: var(--black);
  border: none;
  border-radius: 0.8rem;
  padding: 1.2rem;
  font-size: 1.6rem;
  font-weight: 900;
  cursor: pointer;
  text-transform: uppercase;
  margin-top: 2rem;
  transition: all 0.2s ease-out;
}

.form__submit:hover {
  background-color: #0cb387;
  color: #2f394d;
}

.error {
  background-color: #ffe6e6;
  color: #ff2e2e;
  border: 1px solid #ff2e2e;
  padding: 1.2rem;
  border-radius: 0.8rem;
}

